--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,12 @@
-asn1crypto==0.24.0
-cached-property==1.5.1
-certifi==2018.8.24
-cffi==1.11.5
-chardet==3.0.4
-cryptography==2.3.1
-Cython==0.28.5
-defusedxml==0.5.0
-dnspython==1.15.0
-exchangelib==1.12.0
-future==0.16.0
-idna==2.7
-isodate==0.6.0
-Jinja2==2.10
-lxml==4.2.5
-MarkupSafe==1.0
-ntlm-auth==1.2.0
-numpy==1.15.2
-pandas==0.23.4
-pycparser==2.19
-Pygments==2.2.0
-pyOpenSSL==18.0.0
-PySocks==1.6.8
-python-dateutil==2.7.3
-pytz==2018.5
-requests==2.19.1
-requests-ntlm==1.1.0
-six==1.11.0
-tzlocal==1.5.1
-urllib3==1.23
-win-inet-pton==1.0.1
-wincertstore==0.2
+cycler==0.10.0
+Cython==0.29.14
+kiwisolver==1.1.0
+matplotlib==3.1.2
+numpy==1.18.1
+pandas==0.25.3
+pyparsing==2.4.6
+python-dateutil==2.8.1
+pytz==2019.3
+scipy==1.4.1
+six==1.14.0
+tqdm==4.41.1
